[build-system]
requires = ["pip", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "menstrual_tracker"
version = "0.1.0"
description = "A CLI tool to manage menstrual cycle information."
authors = [
    { name = "Arnav Ghosh", email = "arnavghosh.official.2004@gmail.com" }
]
dependencies = [
    "sqlalchemy",
    "click",
    "tabulate>=0.9.0",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.8",
]
